Fixed footer everywhere. Fixed & Improved search sections + more.

--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -3,7 +3,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container p-0">
             <div class="col-auto order-1 px-0 mx-0">
-                <button class="navbar-toggler no-glow border-0 order-0" type="button" data-toggle="collapse" data-target="#navbarText1" aria-controls="navbarText1" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler no-glow border-0 order-0" type="button" data-toggle="collapse"
+                        data-target="#navbarText1" aria-controls="navbarText1" aria-expanded="false"
+                        aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
@@ -16,16 +18,18 @@
             <div class="col-auto order-3 collapse navbar-collapse align-content-between" id="navbarText1">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" data-target="#booksCollapseLG, #booksCollapseXS" href="#">
-                            Books <span class="fa d-inline-block align-middle font-weight-light text-light fa-angle-down"></span></a>
-                            <div class="navbar-collapse collapse d-lg-none" id="booksCollapseXS">
+                        <a class="nav-link" data-toggle="collapse" data-target="#booksCollapseLG, #booksCollapseXS"
+                           href="#">
+                            Books <span
+                                class="fa d-inline-block align-middle font-weight-light text-light fa-angle-down"></span></a>
+                        <div class="navbar-collapse collapse d-lg-none" id="booksCollapseXS">
                             <ul class="navbar-nav text-white d-lg-none px-3">
-                                    <a class="text-light" href="/search">Search</a>
-                                    <a class="text-light" href="/search/more/?keyword=latest">The latest books</a>
-                                    <a class="text-light" href="/discover/?show=genres">All genres</a>
-                                    <a class="text-light" href="/discover/?show=themes">All themes</a>
-                                    <a class="text-light" href="/search/more/?keyword=bestsellers">Bestsellers</a>
-                                    <a class="text-light" href="/search/more/?keyword=favourites">Our favorites</a>
+                                <a class="text-light" href="/search">Search</a>
+                                <a class="text-light" href="/search/more/?keyword=latest">The latest books</a>
+                                <a class="text-light" href="/discover/?show=genres">All genres</a>
+                                <a class="text-light" href="/discover/?show=themes">All themes</a>
+                                <a class="text-light" href="/search/more/?keyword=bestsellers">Bestsellers</a>
+                                <a class="text-light" href="/search/more/?keyword=favourites">Our favorites</a>
                             </ul>
                         </div>
                     </li>
@@ -36,8 +40,10 @@
                         <a class="nav-link" href="/search/event/?q=">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="collapse" data-target="#aboutCollapseLG, #aboutCollapseXS" href="#">
-                            About us <span class="fa nav-arrows d-inline-block align-middle font-weight-light text-light fa-angle-down"></span></a>
+                        <a class="nav-link" data-toggle="collapse" data-target="#aboutCollapseLG, #aboutCollapseXS"
+                           href="#">
+                            About us <span
+                                class="fa nav-arrows d-inline-block align-middle font-weight-light text-light fa-angle-down"></span></a>
                         <div class="navbar-collapse collapse d-lg-none" id="aboutCollapseXS">
                             <ul class="navbar-nav text-white d-lg-none px-3">
                                 <a class="text-light" href="/about/">About us</a>
@@ -52,14 +58,17 @@
                 <div class="w-100">
                     <div class="row ml-auto justify-content-end">
                         <a id="cart-button" class="nav-link">
-                            <img class="align-self-center" src="/assets/images/icon_cart.svg" alt="cart button" style="width: auto; height: 20px;">
+                            <img class="align-self-center" src="/assets/images/icon_cart.svg" alt="cart button"
+                                 style="width: auto; height: 20px;">
                         </a>
                         <a class="nav-link mx-3" id="wishlist-button">
-                            <img class="align-self-center" src="/assets/images/icon_cuore.svg" alt="cart button" style="width: auto; height: 18px;">
+                            <img class="align-self-center" src="/assets/images/icon_cuore.svg" alt="cart button"
+                                 style="width: auto; height: 18px;">
                         </a>
                         <a class="nav-link" id="profile-button" data-toggle="collapse" data-target="" aria-controls=""
                            aria-expanded="false">
-                            <img class="align-self-center" src="/assets/images/icon_user.svg" alt="cart button" style="width: auto; height: 22px;">
+                            <img class="align-self-center" src="/assets/images/icon_user.svg" alt="cart button"
+                                 style="width: auto; height: 22px;">
                         </a>
                     </div>
                 </div>
@@ -100,13 +109,13 @@
                     <div class="row d-flex flex-column justify-content-center">
                         <div class="col col-xl-8 m-auto d-md-flex justify-content-center">
                             <div>
-                                <h2 class="text-white m-0">
-                                    <span class="font-weight-bold">first time?</span>
+                                <h2 class="text-white m-0 font-weight-bold">
+                                    First time?
                                 </h2>
                                 <h2 class="text-dark m-0">
                                     <a href="/profile/register">
                                         <a href="/register">
-                                            <span class="font-weight-bold text-dark"><u>register now!</u></span>
+                                            <h2 class="text-dark m-0 font-weight-bold"><u>register now!</u></h2>
                                         </a>
                                     </a>
                                 </h2>
@@ -118,8 +127,8 @@
                 <div class="col-12 col-md-6 linear-gradient py-4 d-flex flex-column justify-content-center">
                     <div class="row">
                         <div class="col col-xl-8 m-auto">
-                            <h2 class="text-white">
-                                <span class="font-weight-bold">login</span>
+                            <h2 class="text-white font-weight-bold">
+                                Login
                             </h2>
                             <form class="form-white form-placeholder-white" id="register-login-form">
                                 <div class="form-row">
@@ -150,12 +159,17 @@
             <div class="container h-100">
                 <div class="container h-100 px-0">
                     <div class="row h-100">
-                        <div class="col-12 col-lg-4 d-flex flex-column justify-content-center">
-                            <div class="container p-0 ">
-                                <h3 class="text-white">
-                                    Hi <span id="username"></span>!
+                        <div class="col-12 col-lg-4 d-flex flex-column justify-content-center justify-content-lg-end">
+                            <div class="container px-0">
+                                <h3 class="text-white d-inline">
+                                    Hi
                                 </h3>
-                                <button type="button" class="btn btn-dark rounded-pill logout d-none d-lg-block">
+                                <h3 class="text-white d-inline mx-1" id="username">
+                                </h3>
+                                <h3 class="text-white d-inline">
+                                    !
+                                </h3>
+                                <button type="button" class="btn btn-dark rounded-pill logout d-none d-lg-block mt-4">
                                     Logout
                                 </button>
                                 <hr class="style1 border-white d-lg-none d-block">
@@ -163,18 +177,15 @@
                         </div>
                         <div class="col-12 col-lg-8 d-flex flex-column justify-content-center justify-content-lg-end">
                             <div class="container p-0 text-lg-center">
-                                <div class="row">
-                                    <div class="col-12 col-lg py-1 py-lg-0">
+                                <div class="row no-gutters">
+                                    <div class="col-12 col-lg py-1 py-lg-0 text-lg-right">
                                         <a href="/profile" class="text-white">My Profile</a>
                                     </div>
-                                    <div class="col-12 col-lg py-1 py-lg-0">
-                                        <a href="#" class="text-white">Orders</a>
+                                    <div class="col-12 col-lg py-1 py-lg-0 text-lg-right">
+                                        <a href="/profile/order" class="text-white">Orders</a>
                                     </div>
-                                    <div class="col-12 col-lg py-1 py-lg-0">
-                                        <a href="#" class="text-white">Wishlist</a>
-                                    </div>
-                                    <div class="col-12 col-lg py-1 py-lg-0">
-                                        <a href="#" class="text-white">My reviews</a>
+                                    <div class="col-12 col-lg py-1 py-lg-0 text-lg-right">
+                                        <a href="/profile/wishlist" class="text-white">Wishlist</a>
                                     </div>
                                     <div class="col-12 col-lg py-1 py-lg-0 d-block d-lg-none">
                                         <a href="#" class="text-white logout">
