--- a/public/search/search.css
+++ b/public/search/search.css
@@ -93,4 +93,72 @@
   }
 }
 
+.search-bar-wrapper {
+  border: 1px solid #21263F;
+  transition: 0.2s ease-in-out;
+  border-radius: 34px;
+  overflow: hidden;
+  color: #21263F;
+}
+
+.search-bar-wrapper .form-control {
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.search-bar-wrapper .form-control, .search-bar-wrapper .btn.round {
+  border: hidden;
+  background: transparent;
+}
+
+.search-bar-wrapper .form-control::placeholder {
+  color: #21263F;
+}
+
+.search-bar-wrapper .form-control {
+  outline: none !important;
+  box-shadow: none !important;
+  color: #21263F;
+  transition: 0.2s ease-in-out;
+}
+
+.search-bar-wrapper i {
+  color: #21263F;
+  transition: 0.2s ease-in-out;
+}
+
+.search-bar-wrapper .btn.round {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.search-bar-wrapper .btn.round:active {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.search-bar-wrapper .form-control:focus-within {
+  border-color: white;
+}
+
+.focused {
+  transition: 0.2s ease-in-out;
+  border-color: #E83273;
+}
+
+.focused .search-bar {
+  transition: 0.2s ease-in-out;
+  color: #E83273;
+}
+
+.focused i {
+  transition: 0.2s ease-in-out;
+  color: #E83273;
+}
+
+.search-bar-wrapper.focused .form-control::placeholder {
+  transition: 0.2s ease-in-out;
+  color: #E83273;
+}
+
 /*# sourceMappingURL=search.css.map */
