--- a/public/discover/discover.scss
+++ b/public/discover/discover.scss
@@ -1,11 +1,10 @@
 .discover-section {
     position: absolute;
     left: 0;
-    top: 0;
+    top: -80px;
     right: 0;
     bottom: 0;
     z-index: -100;
-    padding-top: 100px;
     background-image: url("/assets/images/genre_bg.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -24,4 +23,8 @@
     opacity: 1;
     filter: alpha(opacity=100);
     /* For IE8 and earlier */
+}
+
+.footer {
+    top: calc(100vh - 100px);
 }
