--- a/public/lib/scss/bobooky-theme.css
+++ b/public/lib/scss/bobooky-theme.css
@@ -10348,9 +10348,7 @@ body {
 .footer {
   position: absolute;
   bottom: -600px;
-  height: 600px;
-  background: red;
-  width: 100%;
+  height: auto !important;
 }
 
 .form-group {
