--- a/public/profile/scss/index.scss
+++ b/public/profile/scss/index.scss
@@ -50,4 +50,11 @@ body {
   outline: none !important;
   box-shadow: none;
 }
-
+.in-front {
+  z-index: 1000;
+}
+.footer {
+  position: relative;
+  bottom: -200px;
+  min-height: 30vh !important;
+}
