Added events in book/author. Fixed event search & styling. Bug fixing. Improved cart. Fixed API event search. Added api call to get events for a specific book.

--- a/public/components/search/event/event-search.html
+++ b/public/components/search/event/event-search.html
@@ -27,17 +27,17 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col">
-                                    <h5 class="event-title text-purple">TITLE OF THE EVENT</h5>
+                                    <h4 class="event-title text-purple text-capitalize">TITLE OF THE EVENT</h4>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <h5 class="event-author">Name of the author</h5>
+                                    <h6 class="event-author">Name of the author</h6>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <h5 class="event-book">Name of the Book</h5>
+                                    <h6 class="event-book">Name of the Book</h6>
                                 </div>
                             </div>
                         </div>
@@ -52,7 +52,7 @@
                                                 <div class="fa fa-location-arrow"></div>
                                             </div>
                                             <div class="col">
-                                                <h5 class="event-location">Milano, piazza duomo</h5>
+                                                <h6 class="event-location">Milano, piazza duomo</h6>
                                             </div>
                                         </div>
                                     </div>
@@ -66,7 +66,7 @@
                                                 <div class="fa fa-clock-o"></div>
                                             </div>
                                             <div class="col">
-                                                <h5 class="event-time">18:30</h5>
+                                                <h6 class="event-time">18:30</h6>
                                             </div>
                                         </div>
                                     </div>
@@ -74,7 +74,7 @@
                             </div>
                             <div class="row">
                                 <div class="col">
-                                    <a href="#" class="more text-purple">more details</a>
+                                    <a href="#" class="more text-purple font-weight-bold">more details</a>
                                 </div>
                             </div>
                         </div>
