--- a/public/profile/wishlist/wishlist.scss
+++ b/public/profile/wishlist/wishlist.scss
@@ -1,7 +1,7 @@
-@import "../lib/bootstrap/scss/functions";
-@import "../lib/bootstrap/scss/variables";
-@import "../lib/bootstrap/scss/mixins/breakpoints";
-@import "../lib/bootstrap/scss/variables";
+@import "../../lib/bootstrap/scss/functions";
+@import "../../lib/bootstrap/scss/variables";
+@import "../../lib/bootstrap/scss/mixins/breakpoints";
+@import "../../lib/bootstrap/scss/variables";
 
 
 
