--- a/public/search/more/search.css
+++ b/public/search/more/search.css
@@ -1,13 +1,8 @@
 .books-container .book .image {
   width: calc(100vw - 2rem);
   background-size: 100% 100%;
-  height: 140vw;
-}
-@media (min-width: 576px) {
-  .books-container .book .image {
-    width: 14rem;
-    height: 22.4rem;
-  }
-}
-
-/*# sourceMappingURL=search.css.map */
+  height: 140vw; }
+  @media (min-width: 576px) {
+    .books-container .book .image {
+      width: 14rem;
+      height: 22.4rem; } }
