Footer links + fixed coherent breadcrumb style

--- a/public/components/footer/footer.html
+++ b/public/components/footer/footer.html
@@ -13,25 +13,25 @@
                 </div>
                 <div class="col-6 col-md-3 px-3">
                     <ul class="px-3 link-pink">
-                        <a class="text-light" href="">All the books</a><br>
-                        <a class="text-light" href="">The latest books</a><br>
-                        <a class="text-light" href="">All genres</a><br>
-                        <a class="text-light" href="">All themes</a><br>
-                        <a class="text-light" href="">Bestsellers</a><br>
-                        <a class="text-light" href="">Our favorites</a><br>
+                        <a class="text-light" href=/search"">Search</a><br>
+                        <a class="text-light" href=/search/more/?keyword=latest"">The latest books</a><br>
+                        <a class="text-light" href="/discover/?show=genres">All genres</a><br>
+                        <a class="text-light" href="/discover/?show=themes">All themes</a><br>
+                        <a class="text-light" href="/search/more/?keyword=bestsellers">Bestsellers</a><br>
+                        <a class="text-light" href="/search/more/?keyword=favourites">Our favorites</a><br>
                     </ul>
                 </div>
                 <div class="col-6 col-md-3 px-3 mb-5">
                     <div class="link-danger">
-                        <a class="text-light" href="">All the authors</a><br>
+                        <a class="text-light" href="/search/author/?q=">All the authors</a><br>
                     </div>
                     <div class="link-purple">
-                        <a class="text-light" href="">All the events</a><br>
+                        <a class="text-light" href="/search/event/?q=">All the events</a><br>
                     </div>
                     <div class="link-warning">
-                        <a class="text-light" href="">About us</a><br>
-                        <a class="text-light" href="">Contact us</a><br>
-                        <a class="text-light" href="">Ordering & Shipping</a>
+                        <a class="text-light" href="/about/">About us</a><br>
+                        <a class="text-light" href="/about/contact">Contact us</a><br>
+                        <a class="text-light" href="/about/shipping">Ordering & Shipping</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 px-3">
