--- a/public/lib/scss/bobooky-theme.scss
+++ b/public/lib/scss/bobooky-theme.scss
@@ -91,8 +91,7 @@ body {
 
   //hover link a tema
     .link-#{$key} > a:hover {
-        color: $color !important;
-        text-decoration: none
+        color: $color !important
     }
 
     /*
