--- a/public/lib/scss/bobooky-theme.scss
+++ b/public/lib/scss/bobooky-theme.scss
@@ -21,6 +21,8 @@ $theme-colors: (
 
 html {
     scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
 }
 
 /* This line adds an offset to all pages to account for the navbar */
@@ -29,15 +31,10 @@ body {
     @include media-breakpoint-up(lg) {
         padding-top: 70px;
     }
-
-    /* Do not touch me */
-    position: relative;
 }
 
 .footer {
-    position: absolute;
-    bottom: -600px;
-    height: auto !important;
+
 }
 
 
