--- a/public/index.css
+++ b/public/index.css
@@ -22,7 +22,8 @@
 
 .search-bar .form-control {
   font-size: 24px;
-  font-weight: 400; }
+  font-weight: 400;
+  color: #fff; }
 
 .search-bar .form-control, .search-bar .btn.round {
   height: 3.5rem;
