--- a/public/discover/discover.css
+++ b/public/discover/discover.css
@@ -1,11 +1,13 @@
 /* This line adds an offset to all pages to account for the navbar */
 body {
   /* Do not touch me */
-  position: relative; }
+  position: relative;
+}
 
 .footer {
   position: absolute;
-  top: calc(100vh - 100px); }
+  top: calc(100vh - 100px);
+}
 
 .discover-section {
   position: absolute;
@@ -16,16 +18,21 @@ body {
   z-index: -100;
   background-image: url("/assets/images/genre_bg.png");
   background-repeat: no-repeat;
-  background-size: cover; }
+  background-size: cover;
+}
 
 .blurred-bg {
   z-index: -99;
   background-color: #21263F;
   opacity: 0.7;
-  filter: opacity(70px); }
+  filter: opacity(70px);
+}
 
 .text {
   z-index: 100;
   opacity: 1;
   filter: alpha(opacity=100);
-  /* For IE8 and earlier */ }
+  /* For IE8 and earlier */
+}
+
+/*# sourceMappingURL=discover.css.map */
