--- a/public/components/search/event/event-search.html
+++ b/public/components/search/event/event-search.html
@@ -27,7 +27,9 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col">
-                                    <h4 class="event-title text-purple text-capitalize">TITLE OF THE EVENT</h4>
+                                    <a href="#" class="more text-decoration-none">
+                                        <h4 class="event-title text-purple text-capitalize">TITLE OF THE EVENT</h4>
+                                    </a>
                                 </div>
                             </div>
                             <div class="row">
