--- a/public/components/cart/cart-element.html
+++ b/public/components/cart/cart-element.html
@@ -2,15 +2,20 @@
     <div class="py-3">
         <div class="row align-items-center">
             <div class="col-4 col-sm-3 pl-4">
-                <img class="w-100 book-image"
-                     src="https://images-na.ssl-images-amazon.com/images/I/51DA1hQNnJL._SX324_BO1,204,203,200_.jpg">
+
+                <a href="#" class="text-decoration-none book-title-href">
+                    <img class="w-100 book-image rounded"
+                         src="https://images-na.ssl-images-amazon.com/images/I/51DA1hQNnJL._SX324_BO1,204,203,200_.jpg"></a>
             </div>
             <div class="col h-100">
                 <div class="container h-100 px-0">
                     <div class="row align-items-center h-100">
                         <div class="col-12 col-md-4 title ">
-                            <h5 class="book-title">Title</h5>
-                            <h6 class="book-author">Author</h6>
+                            <a href="#" class="text-decoration-none book-title-href text-primary"><h5
+                                    class="book-title">Title</h5>
+                            </a>
+                            <h6 class="book-author">
+                                Author</h6>
                         </div>
                         <div class="col-12 col-md-3 p-0 m-0">
                             <div class="container h-100">
@@ -20,7 +25,8 @@
                                             <i class="fa fa-minus"></i>
                                         </button>
                                     </div>
-                                    <div class="col-1 align-self-center text-center"><h5 class="book-qty pt-2">#</h5></div>
+                                    <div class="col-1 align-self-center text-center"><h5 class="book-qty pt-2">#</h5>
+                                    </div>
                                     <div class="col-4 align-self-center">
                                         <button class="btn btn-primary btn-sm text-white plus-button btn-circle-bobooky">
                                             <i class="fa fa-plus"></i>
