--- a/public/profile/wishlist/wishlist.css
+++ b/public/profile/wishlist/wishlist.css
@@ -1,8 +1,17 @@
 .books-container .book .image {
   width: calc(100vw - 2rem);
   background-size: 100% 100%;
-  height: 140vw; }
-  @media (min-width: 576px) {
-    .books-container .book .image {
-      width: 14rem;
-      height: 22.4rem; } }
+  height: 140vw;
+}
+@media (min-width: 576px) {
+  .books-container .book .image {
+    width: 14rem;
+    height: 22.4rem;
+  }
+}
+
+.section.books {
+  min-height: calc(100vh - 650px);
+}
+
+/*# sourceMappingURL=wishlist.css.map */
