--- a/public/components/navbar/navbar.scss
+++ b/public/components/navbar/navbar.scss
@@ -51,9 +51,10 @@ div .blurred-bg:before {
     font-size: 20px;
 }
 
-.nav-arrows:focus, .nav-arrows:active {
-
+.nav-link {
+    cursor:pointer;
 }
+
 
 #books-expanded {
     background-color: rgba(33, 38, 63, 0.5);
