--- a/public/components/navbar/navbar.css
+++ b/public/components/navbar/navbar.css
@@ -1,43 +1,63 @@
 .navbar {
   /* IMPORTANT! IF YOU CHANGE THE NAVBAR HEIGHT
-    MAKE SURE TO CHANGE THE BODY PADDING
-    AS WELL IN BOBOOKY THEME!*/ }
-  @media (min-width: 992px) {
-    .navbar {
-      height: 70px; } }
+  MAKE SURE TO CHANGE THE BODY PADDING
+  AS WELL IN BOBOOKY THEME!*/
+}
+@media (min-width: 992px) {
+  .navbar {
+    height: 70px;
+  }
+}
 
 div .blurred-bg {
   position: relative;
   background: #21263F;
-  opacity: 0.9; }
+  opacity: 0.9;
+}
 
 div .blurred-bg:before {
-  content: '';
+  content: "";
   position: absolute;
   background: #21263F;
-  filter: blur(5px); }
+  filter: blur(5px);
+}
 
 .objects {
-  max-height: calc(100vh - 156px); }
+  max-height: calc(100vh - 156px);
+}
 
 .navbar-brand-b img {
-  height: 30px; }
-  @media (max-width: 991.98px) {
-    .navbar-brand-b img {
-      height: 25px; } }
+  height: 30px;
+}
+@media (max-width: 991.98px) {
+  .navbar-brand-b img {
+    height: 25px;
+  }
+}
 
 @media (max-width: 991.98px) {
   .sub-menu {
-    display: none; } }
+    display: none;
+  }
+}
 
 /*
   Navbar config
  */
 .navbar .fa {
-  font-size: 20px; }
+  font-size: 20px;
+}
+
+.nav-link {
+  cursor: pointer;
+}
 
 #books-expanded {
-  background-color: rgba(33, 38, 63, 0.5); }
+  background-color: rgba(33, 38, 63, 0.5);
+}
 
 #books-expanded a {
-  color: #fff; }
+  color: #fff;
+}
+
+/*# sourceMappingURL=navbar.css.map */
