Footer link + style

--- a/public/components/footer/footer.html
+++ b/public/components/footer/footer.html
@@ -12,8 +12,8 @@
             </div>
             <div class="col-6 col-md-3 px-3">
                 <ul class="px-3 link-pink">
-                    <a class="text-light" href=/search"">Search</a><br>
-                    <a class="text-light" href=/search/more/?keyword=latest"">The latest books</a><br>
+                    <a class="text-light" href="/search">Search</a><br>
+                    <a class="text-light" href="/search/more/?keyword=latest">The latest books</a><br>
                     <a class="text-light" href="/discover/?show=genres">All genres</a><br>
                     <a class="text-light" href="/discover/?show=themes">All themes</a><br>
                     <a class="text-light" href="/search/more/?keyword=bestsellers">Bestsellers</a><br>
