Fixed cart & orders bugs.

--- a/public/components/navbar/navbar.css
+++ b/public/components/navbar/navbar.css
@@ -48,6 +48,10 @@ div .blurred-bg:before {
   font-size: 20px;
 }
 
+.nav-link {
+  cursor: pointer;
+}
+
 #books-expanded {
   background-color: rgba(33, 38, 63, 0.5);
 }
